# CyberFiles

./: Cargo.toml  build-debug.ps1  build-release.ps1
.cursor/rules/: cargo-run-verify.mdc
.cursor/skills/cargo-run-verify/: SKILL.md
crates/app/: Cargo.toml  app-icon.rc  build.rs
crates/app/src/: cybereditor.rs  main.rs
crates/assets/: Cargo.toml
crates/assets/src/: lib.rs  themes.rs
crates/assets/themes/: README.md  ant.json  ayu.json  cyberfiles-blue.json  cyberfiles-mint.json  cyberfiles-yellow.json  gruvbox.json  one.json
crates/commands/: Cargo.toml
crates/commands/src/: lib.rs  shortcuts.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  lib.rs  path_history.rs
crates/fs/: Cargo.toml
crates/fs/src/: archive.rs  clipboard.rs  columns.rs  drives.rs  file_tag.rs  home.rs  item.rs  lib.rs  local.rs  omnibar.rs  ops.rs  preview.rs  recent.rs  recycle.rs  search.rs  sort.rs  watcher.rs
crates/platform-windows/: Cargo.toml
crates/platform-windows/src/: clipboard.rs  com.rs  context_menu.rs  eject.rs  icons.rs  lib.rs  paths.rs  quick_access.rs  recent_policy.rs  recycle.rs  shell.rs  shell_folder.rs  shell_icon.rs  shell_menu_session.rs  storage.rs  volume.rs
crates/ui/: Cargo.toml
crates/ui/locales/: app.yml
crates/ui/src/: app_state.rs  app_view.rs  color_icon.rs  cyber_editor.rs  drag.rs  file_browser.rs  file_ops.rs  files_shell.rs  i18n.rs  icons.rs  info_pane.rs  lib.rs  list_icon_cache.rs  settings_view.rs  shell_icon.rs  shell_menu_icon.rs  status_center.rs  title_bar.rs  toolbar_button.rs
crates/ui/src/cyber_editor/: backend.rs  buffer_model.rs  document.rs  editor_host.rs  language.rs  metadata.rs  mod.rs  page.rs  session.rs
crates/ui/src/file_browser/: actions.rs  context_menu.rs  context_menu_state.rs  core.rs  helpers.rs  navigation.rs  ops.rs  rename.rs  render.rs  render_views.rs  selection.rs  sweep.rs
crates/ui/src/file_browser/render_views/: columns.rs  table_list.rs  tiles.rs
crates/ui/src/home/: mod.rs  page.rs  thumbnails.rs  widget_shell.rs  widgets.rs
crates/ui/src/main_page/: info.rs  mod.rs  navigation.rs  omnibar.rs  render.rs  render_shell.rs  session.rs  sidebar.rs  tabs.rs
crates/ui/src/omnibar/: breadcrumb_bar.rs  breadcrumb_flyout.rs  breadcrumb_host.rs  mod.rs
crates/ui/src/popup_menu/: README.md  actions.rs  context_menu.rs  dropdown_menu.rs  menu_item.rs  mod.rs  popup_menu.rs
crates/ui/src/resizable/: mod.rs  panel.rs  resize_handle.rs
crates/ui/src/shell/: actions.rs  app_menus.rs  app_shell.rs  mod.rs  navigation.rs  pane_shell.rs  preferences.rs  shell_panes.rs  title_bar.rs  window.rs
crates/ui/src/sidebar/: cache.rs  constants.rs  data.rs  menu_with_drop.rs  mod.rs  model.rs  view.rs
crates/ui/src/tab/: mod.rs  tab.rs  tab_bar.rs
crates/ui/src/theme/: mod.rs
docs/: cybereditor-code-editor-plan.md  dependency-policy.md  execution-guidelines.md  files-context-menu-parity.md  files-parity-roadmap.md  files-priority-backlog.md  files-rust-port-plan.md  gpui-component-analysis.md  home-files-parity.md  main-page-split-plan.md  omnibar-breadcrumb-bugs.md  omnibar-breadcrumb-files-gap.md  popup-menu-icons.md  sidebar-files-gap.md  toolbar-files-gap.md
scripts/: convert_zed_themes.py  sync_files_icons.py  sync_material_icons.py
src/: main.rs
