[workspace]
members = ["crates/app", "crates/core", "crates/ui"]
default-members = ["crates/app"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
publish = false

[workspace.dependencies]
cyberfiles-core = { path = "crates/core" }
cyberfiles-ui = { path = "crates/ui" }

# zed-industries/zed
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", package = "gpui_platform", features = ["font-kit"] }

# longbridge/gpui-component
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component", package = "gpui-component-assets" }

anyhow = "1.0"
rust-i18n = "4"
serde = { version = "1", features = ["derive"] }
sys-locale = "0.3"
