[workspace]
members = [
    "crates/app",
    "crates/assets",
    "crates/commands",
    "crates/core",
    "crates/fs",
    "crates/platform-windows",
    "crates/ui",
]
default-members = ["crates/app"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
publish = false

[workspace.dependencies]
cyberfiles-assets = { path = "crates/assets" }
cyberfiles-commands = { path = "crates/commands" }
cyberfiles-core = { path = "crates/core" }
cyberfiles-fs = { path = "crates/fs" }
cyberfiles-platform-windows = { path = "crates/platform-windows" }
cyberfiles-ui = { path = "crates/ui" }

# zed-industries/zed
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", package = "gpui_platform", features = ["font-kit"] }

# longbridge/gpui-component (git only; see docs/dependency-policy.md)
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component", package = "gpui-component-assets" }

anyhow = "1.0"
chrono = "0.4"
rust-i18n = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sys-locale = "0.3"
unicode-width = "0.2"
