[package]
name = "cyberfiles"
description = "CyberFiles desktop application"
version.workspace = true
edition.workspace = true
publish.workspace = true
build = "build.rs"

[[bin]]
name = "cyberfiles"
path = "src/main.rs"

[dependencies]
cyberfiles-ui.workspace = true
gpui_platform.workspace = true

[build-dependencies]
embed-resource.workspace = true
