[package]
name = "cyberfiles-assets"
description = "Files app icons (ThemedIcon SVG) and assets for CyberFiles"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
gpui.workspace = true
gpui-component-assets.workspace = true
rust-embed = "8"
