[package]
name = "cyberfiles-core"
description = "Shared constants and config for CyberFiles"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
directories = "5"
serde = { workspace = true, features = ["derive"] }
serde_json = "1"

[[bin]]
name = "config_formats_bench"
required-features = ["config_bench"]

[features]
config_bench = ["dep:ron", "dep:bincode", "dep:postcard"]

[dependencies.ron]
version = "0.8"
optional = true

[dependencies.bincode]
version = "1.3"
optional = true

[dependencies.postcard]
version = "1"
features = ["alloc"]
optional = true
