[package]
name = "cyberfiles-fs"
description = "Filesystem model and local enumeration for CyberFiles"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
flume = "0.11"
notify = "8.2"

[target.'cfg(windows)'.dependencies]
lnk = "0.6"
trash = "5.2"
