[package]
name = "cyberfiles-fs"
description = "Filesystem model and local enumeration for CyberFiles"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true

[target.'cfg(windows)'.dependencies]
cyberfiles-platform-windows.workspace = true
flume = "0.11"
lnk = "0.6"
notify = "8.2"
trash = "5.2"
