[package]
name = "cyberfiles-platform-windows"
description = "Windows Shell integration for CyberFiles"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true

[target.'cfg(windows)'.dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
clipboard-win = { version = "5.4", features = ["std"] }
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Registry",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
    "Win32_UI_Controls",
    "Win32_Storage_FileSystem",
] }
