[package]
name = "cyberfiles-ui"
description = "GPUI shell and views for CyberFiles"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
cyberfiles-core.workspace = true
cyberfiles-fs.workspace = true
gpui.workspace = true
gpui-component.workspace = true
gpui-component-assets.workspace = true
rust-i18n.workspace = true
serde.workspace = true
sys-locale.workspace = true
